--- a/src/test/resources/herokuapp/herokuapp_locators.properties
+++ b/src/test/resources/herokuapp/herokuapp_locators.properties
@@ -1,1 +1,2 @@
-abtest_link=xpath=//a[contains(text(), 'A/B Testing')]/@href
+abtest_link=xpath=//a[.='A/B Testing']
+addremoveelements_link=xpath=//a[.='Add/Remove Elements']
