added AddRemoveElements page

--- a/src/main/resources/herokuapp/herokuapp_addremovelements_locators.properties
+++ b/src/main/resources/herokuapp/herokuapp_addremovelements_locators.properties
@@ -1,1 +1,3 @@
 h3text=xpath=//h3[1]
+buttonadd=xpath=//button[contains(text(),'Add Element')]
+buttonremove=xpath=//button[@class='added-manually' and @onclick='deleteElement()']
