--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ sourceSets {
 dependencies {
     implementation 'org.testng:testng:6+'
     implementation 'org.seleniumhq.selenium:selenium-java:4+'
+    implementation 'log4j:log4j:+'
 
     implementation 'org.apache.commons:commons-collections4:+'
 }
@@ -36,6 +37,8 @@ configurations {
 }
 
 test {
-    useTestNG()
-    testLogging.showStandardStreams = true
+    useTestNG() {
+        suites 'src/test/resources/testng.xml'
+//        testLogging.showStandardStreams = true
+    }
 }
