--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -18,7 +18,7 @@ log4j.appender.HTML.Append=false
 #// Here we define the layout and pattern
 log4j.appender.CONSOLE.layout.DateFormat=ISO8601
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
-log4j.appender.CONSOLE.layout.ConversionPattern= (%d) [%t] %-5p %c %x - %m%n
+log4j.appender.CONSOLE.layout.ConversionPattern= (%d) [%t] %-5p: %m%n
 log4j.appender.R.layout=org.apache.log4j.PatternLayout
 log4j.appender.R.layout.ConversionPattern=%d - %c -%p - %m%n
 log4j.appender.TTCC.layout=org.apache.log4j.TTCCLayout
