added BasicAuth test

--- a/src/main/resources/herokuapp/herokuapp_url.properties
+++ b/src/main/resources/herokuapp/herokuapp_url.properties
@@ -1,4 +1,5 @@
 url_main=https://the-internet.herokuapp.com
 url_abtest=https://the-internet.herokuapp.com/abtest
 url_addremoveelements=https://the-internet.herokuapp.com/add_remove_elements/
+url_basicauth=https://admin:admin@the-internet.herokuapp.com/basic_auth
 url_brokenimages=https://the-internet.herokuapp.com/broken_images
