--- a/src/main/resources/herokuapp/herokuapp_url.properties
+++ b/src/main/resources/herokuapp/herokuapp_url.properties
@@ -4,3 +4,4 @@ url_addremoveelements=https://the-internet.herokuapp.com/add_remove_elements/
 url_basicauth=https://admin:admin@the-internet.herokuapp.com/basic_auth
 url_brokenimages=https://the-internet.herokuapp.com/broken_images
 url_challengingdom=https://the-internet.herokuapp.com/challenging_dom
+url_checkboxes=https://the-internet.herokuapp.com/checkboxes
